@@ -1,5 +1,7 @@
 package io.openems.edge.core.appmanager;
 
+import static java.util.Collections.emptyList;
+
 import java.util.AbstractMap;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -8,18 +10,18 @@ import java.util.Iterator;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map.Entry;
-import java.util.NoSuchElementException;
 import java.util.Optional;
 import java.util.UUID;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.TimeUnit;
+import java.util.concurrent.locks.Condition;
+import java.util.concurrent.locks.Lock;
+import java.util.concurrent.locks.ReentrantLock;
 import java.util.function.BiFunction;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
 import org.osgi.service.cm.ConfigurationAdmin;
-import org.osgi.service.cm.ConfigurationEvent;
-import org.osgi.service.cm.ConfigurationListener;
 import org.osgi.service.component.ComponentContext;
 import org.osgi.service.component.ComponentServiceObjects;
 import org.osgi.service.component.annotations.Activate;
@@ -35,24 +37,26 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import com.google.gson.JsonArray;
+import com.google.gson.JsonObject;
 
-import io.openems.common.exceptions.OpenemsError;
 import io.openems.common.exceptions.OpenemsError.OpenemsNamedException;
 import io.openems.common.exceptions.OpenemsException;
+import io.openems.common.function.ThrowingConsumer;
 import io.openems.common.function.ThrowingFunction;
 import io.openems.common.function.ThrowingSupplier;
-import io.openems.common.jsonrpc.base.GenericJsonrpcResponseSuccess;
-import io.openems.common.jsonrpc.base.JsonrpcRequest;
-import io.openems.common.jsonrpc.base.JsonrpcResponseSuccess;
 import io.openems.common.jsonrpc.request.UpdateComponentConfigRequest;
 import io.openems.common.jsonrpc.request.UpdateComponentConfigRequest.Property;
+import io.openems.common.oem.OpenemsEdgeOem;
+import io.openems.common.session.Language;
 import io.openems.common.session.Role;
 import io.openems.common.utils.JsonUtils;
-import io.openems.common.utils.Mutex;
 import io.openems.edge.common.component.AbstractOpenemsComponent;
 import io.openems.edge.common.component.ComponentManager;
 import io.openems.edge.common.component.OpenemsComponent;
-import io.openems.edge.common.jsonapi.JsonApi;
+import io.openems.edge.common.jsonapi.ComponentJsonApi;
+import io.openems.edge.common.jsonapi.EdgeGuards;
+import io.openems.edge.common.jsonapi.EdgeKeys;
+import io.openems.edge.common.jsonapi.JsonApiBuilder;
 import io.openems.edge.common.user.User;
 import io.openems.edge.core.appmanager.dependency.AppManagerAppHelper;
 import io.openems.edge.core.appmanager.dependency.Dependency;
@@ -66,7 +70,6 @@ import io.openems.edge.core.appmanager.jsonrpc.GetAppInstances;
 import io.openems.edge.core.appmanager.jsonrpc.GetApps;
 import io.openems.edge.core.appmanager.jsonrpc.UpdateAppInstance;
 import io.openems.edge.core.appmanager.validator.Validator;
-import io.openems.edge.core.componentmanager.ComponentManagerImpl;
 
 @Designate(ocd = Config.class, factory = false)
 @Component(//
@@ -75,12 +78,12 @@ import io.openems.edge.core.componentmanager.ComponentManagerImpl;
 		property = { //
 				"enabled=true" //
 		})
-public class AppManagerImpl extends AbstractOpenemsComponent
-		implements AppManager, OpenemsComponent, JsonApi, ConfigurationListener {
+public class AppManagerImpl extends AbstractOpenemsComponent implements AppManager, OpenemsComponent, ComponentJsonApi {
 
-	private final Logger log = LoggerFactory.getLogger(this.getClass());
+	private final Logger log = LoggerFactory.getLogger(AppManagerImpl.class);
 
-	private final AppValidateWorker worker;
+	@Reference
+	private AppValidateWorker appValidateWorker;
 	private final AppInstallWorker appInstallWorker;
 	private final AppSynchronizeWorker appSynchronizeWorker;
 
@@ -97,6 +100,9 @@ public class AppManagerImpl extends AbstractOpenemsComponent
 	protected ComponentManager componentManager;
 
 	@Reference
+	private OpenemsEdgeOem oem;
+
+	@Reference
 	protected ComponentUtil componentUtil;
 
 	@Reference
@@ -111,16 +117,17 @@ public class AppManagerImpl extends AbstractOpenemsComponent
 	 * Blocks until all changes to an app have been applied to the list of
 	 * instantiatedApps and the appManagerConfiguration.
 	 */
-	private boolean aquiredMutex = false;
-	private final Mutex mutexForUpdatingConfig = new Mutex(true);
 	private UpdateValues lastUpdate = null;
+
+	protected final Lock lockModifyingApps = new ReentrantLock();
+	protected final Condition waitingForModifiedCondition = this.lockModifyingApps.newCondition();
+	protected volatile boolean waitingForModified = false;
 
 	public AppManagerImpl() {
 		super(//
 				OpenemsComponent.ChannelId.values(), //
 				AppManager.ChannelId.values() //
 		);
-		this.worker = new AppValidateWorker(this);
 		this.appInstallWorker = new AppInstallWorker(this);
 		this.appSynchronizeWorker = new AppSynchronizeWorker(this);
 	}
@@ -130,7 +137,7 @@ public class AppManagerImpl extends AbstractOpenemsComponent
 		super.activate(componentContext, SINGLETON_COMPONENT_ID, SINGLETON_SERVICE_PID, true);
 		this.applyConfig(config);
 
-		this.worker.activate(this.id());
+		this.appValidateWorker.setConfig(new AppValidateWorker.Config(this::_setDefectiveApp));
 		this.appInstallWorker.activate(this.id());
 		this.appSynchronizeWorker.activate(this.id());
 
@@ -150,12 +157,11 @@ public class AppManagerImpl extends AbstractOpenemsComponent
 		super.modified(componentContext, SINGLETON_COMPONENT_ID, SINGLETON_SERVICE_PID, true);
 		this.applyConfig(config);
 
-		this.worker.modified(this.id());
 		this.appInstallWorker.modified(this.id());
 		this.appSynchronizeWorker.modified(this.id());
 
 		this.appInstallWorker.setKeyForFreeApps(config.keyForFreeApps());
-		this.worker.triggerNextRun();
+		this.appValidateWorker.triggerNextRun();
 
 		if (OpenemsComponent.validateSingleton(this.cm, SINGLETON_SERVICE_PID, SINGLETON_COMPONENT_ID)) {
 			return;
@@ -166,7 +172,6 @@ public class AppManagerImpl extends AbstractOpenemsComponent
 	@Deactivate
 	protected void deactivate() {
 		super.deactivate();
-		this.worker.deactivate();
 		this.appInstallWorker.deactivate();
 		this.appSynchronizeWorker.deactivate();
 	}
@@ -238,69 +243,64 @@ public class AppManagerImpl extends AbstractOpenemsComponent
 		return result;
 	}
 
-	private synchronized void applyConfig(Config config) {
+	private void applyConfig(Config config) {
 		boolean isResultOfRpcRequest = false;
-		synchronized (this.instantiatedApps) {
-			try {
-				var apps = config.apps();
-				if (apps.isBlank()) {
-					apps = "[]"; // default to empty array
-				}
-				try {
-					var instApps = parseInstantiatedApps(JsonUtils.parseToJsonArray(apps));
 
-					// always replace old apps with the new ones
-					var currentApps = new ArrayList<>(this.instantiatedApps);
+		this.lockModifyingApps.lock();
 
-					// if equal the applyConfig is because of a
-					// installation/modification/removing of an app via JsonrpcRequest
-					if (currentApps.containsAll(instApps)//
-							&& instApps.size() == currentApps.size()) {
-						isResultOfRpcRequest = true;
-					} else if (this.lastUpdate != null //
-							&& (!instApps.containsAll(this.lastUpdate.modifiedOrCreatedApps) //
-									|| instApps.stream().anyMatch(t -> this.lastUpdate.deletedApps.stream() //
-											.anyMatch(o -> o.equals(t))))) {
-						// the last update was not applied
-						this.logWarn(this.log, "Modified AppManager config properties directly. " //
-								+ "If there was an installation/modification/deinstallation of an App " //
-								+ "running there might be lost configuration changes. Expected: " //
-								+ "Installed/Modified: " //
-								+ JsonUtils.prettyToString(this.lastUpdate.modifiedOrCreatedApps.stream() //
-										.map(OpenemsAppInstance::toJsonObject) //
-										.collect(JsonUtils.toJsonArray()))
-								+ Optional.ofNullable(this.lastUpdate.deletedApps) //
-										.map(deletedApps -> {
-											return System.lineSeparator() + "Removed: " //
-													+ JsonUtils.prettyToString(this.lastUpdate.deletedApps.stream() //
-															.map(OpenemsAppInstance::toJsonObject) //
-															.collect(JsonUtils.toJsonArray()));
-										}).orElse(""));
-					}
-
-					this.instantiatedApps.clear();
-					this.instantiatedApps.addAll(instApps);
-
-					this._setWrongAppConfiguration(false);
-
-				} catch (OpenemsNamedException e) {
-					this._setWrongAppConfiguration(true);
-					e.printStackTrace();
-					return;
-				}
-			} finally {
-				if (isResultOfRpcRequest && this.aquiredMutex) {
-					this.lastUpdate = null;
-					this.aquiredMutex = false;
-					this.mutexForUpdatingConfig.release();
-				}
+		try {
+			var apps = config.apps();
+			if (apps == null || apps.isBlank()) {
+				apps = "[]"; // default to empty array
 			}
-		}
-	}
+			var instApps = parseInstantiatedApps(JsonUtils.parseToJsonArray(apps));
 
-	@Override
-	public void configurationEvent(ConfigurationEvent event) {
-		this.worker.configurationEvent(event);
+			// always replace old apps with the new ones
+			var currentApps = new ArrayList<>(this.instantiatedApps);
+
+			// if equal the applyConfig is because of a
+			// installation/modification/removing of an app via JsonrpcRequest
+			if (currentApps.containsAll(instApps)//
+					&& instApps.size() == currentApps.size()) {
+				isResultOfRpcRequest = true;
+			} else if (this.lastUpdate != null //
+					&& (!instApps.containsAll(this.lastUpdate.modifiedOrCreatedApps) //
+							|| instApps.stream().anyMatch(t -> this.lastUpdate.deletedApps.stream() //
+									.anyMatch(o -> o.equals(t))))) {
+				// the last update was not applied
+				this.logWarn(this.log, "Modified AppManager config properties directly. " //
+						+ "If there was an installation/modification/deinstallation of an App " //
+						+ "running there might be lost configuration changes. Expected: " //
+						+ "Installed/Modified: " //
+						+ JsonUtils.prettyToString(this.lastUpdate.modifiedOrCreatedApps.stream() //
+								.map(OpenemsAppInstance::toJsonObject) //
+								.collect(JsonUtils.toJsonArray()))
+						+ Optional.ofNullable(this.lastUpdate.deletedApps) //
+								.map(deletedApps -> {
+									return System.lineSeparator() + "Removed: " //
+											+ JsonUtils.prettyToString(this.lastUpdate.deletedApps.stream() //
+													.map(OpenemsAppInstance::toJsonObject) //
+													.collect(JsonUtils.toJsonArray()));
+								}).orElse(""));
+			}
+
+			this.instantiatedApps.clear();
+			this.instantiatedApps.addAll(instApps);
+
+			this._setWrongAppConfiguration(false);
+
+		} catch (OpenemsNamedException e) {
+			this._setWrongAppConfiguration(true);
+			e.printStackTrace();
+		} finally {
+			if (isResultOfRpcRequest) {
+				this.lastUpdate = null;
+			}
+
+			this.waitingForModified = false;
+			this.waitingForModifiedCondition.signal();
+			this.lockModifyingApps.unlock();
+		}
 	}
 
 	/**
@@ -394,18 +394,18 @@ public class AppManagerImpl extends AbstractOpenemsComponent
 					}
 
 					try {
-						var app = AppManagerImpl.this.findAppById(this.nextInstance.appId);
-						this.nextInstance.properties.addProperty("ALIAS", this.nextInstance.alias);
-						this.nextConfiguration = app.getAppConfiguration(ConfigurationTarget.VALIDATE,
-								this.nextInstance.properties, null);
+						var app = AppManagerImpl.this.findAppById(this.nextInstance.appId).orElse(null);
+						if (app == null) {
+							// app not found for instance
+							// this may happen if the app id gets refactored
+							// apps which app ids are not known are printed in debug log as 'UNKNOWNAPPS'
+							continue;
+						}
+						final var props = this.nextInstance.properties.deepCopy();
+						props.addProperty("ALIAS", this.nextInstance.alias);
+						this.nextConfiguration = app.getAppConfiguration(ConfigurationTarget.VALIDATE, props, null);
 					} catch (OpenemsNamedException e) {
 						// move to next app
-					} catch (NoSuchElementException e) {
-						// app not found for instance
-						// this may happen if the app id gets refactored
-						// apps which app ids are not known are printed in debug log as 'UNKNOWNAPPS'
-					} finally {
-						this.nextInstance.properties.remove("ALIAS");
 					}
 				}
 
@@ -416,34 +416,59 @@ public class AppManagerImpl extends AbstractOpenemsComponent
 
 	@Override
 	public String debugLog() {
-		return this.worker.debugLog();
+		final var workerLog = this.appValidateWorker.debugLog();
+		if (workerLog == null && !this.waitingForModified) {
+			return null;
+		}
+		return "AppValidateWorker=" + workerLog //
+				+ ", waitingForModified=" + this.waitingForModified;
 	}
 
 	/**
-	 * finds the app with the matching id.
-	 *
-	 * @param id of the app
-	 * @return the found app
+	 * Finds the {@link OpenemsApp} with the given id.
+	 * 
+	 * @param id the {@link OpenemsApp#getAppId()} of the app.
+	 * @return a {@link Optional} of the app
 	 */
-	protected final OpenemsApp findAppById(String id) throws NoSuchElementException {
+	public final Optional<OpenemsApp> findAppById(String id) {
 		return this.availableApps.stream() //
 				.filter(t -> t.getAppId().equals(id)) //
-				.findFirst() //
-				.get();
+				.findFirst();
 	}
 
 	/**
-	 * Finds the app instance with the matching id.
-	 *
-	 * @param uuid the id of the instance
-	 * @return s the instance
-	 * @throws NoSuchElementException if no instance is present
+	 * Finds the {@link OpenemsApp} with the given id.
+	 * 
+	 * @param id the {@link OpenemsApp#getAppId()} of the app.
+	 * @return the app
+	 * @throws OpenemsNamedException if the app was not found
 	 */
-	protected final OpenemsAppInstance findInstanceById(UUID uuid) throws NoSuchElementException {
+	public final OpenemsApp findAppByIdOrError(String id) throws OpenemsNamedException {
+		return this.findAppById(id).orElseThrow(() -> new OpenemsException("Unable to find app with id '" + id + "'"));
+	}
+
+	/**
+	 * Finds the {@link OpenemsAppInstance} with the given {@link UUID}.
+	 *
+	 * @param id the id of the instance
+	 * @return a {@link Optional} of the instance
+	 */
+	protected final Optional<OpenemsAppInstance> findInstanceById(UUID id) {
 		return this.instantiatedApps.stream() //
-				.filter(t -> t.instanceId.equals(uuid)) //
-				.findFirst() //
-				.get();
+				.filter(t -> t.instanceId.equals(id)) //
+				.findFirst();
+	}
+
+	/**
+	 * Finds the {@link OpenemsAppInstance} with the given {@link UUID}.
+	 * 
+	 * @param id the {@link UUID} of the instance
+	 * @return the instance
+	 * @throws OpenemsNamedException if not found
+	 */
+	protected final OpenemsAppInstance findInstanceByIdOrError(UUID id) throws OpenemsNamedException {
+		return this.findInstanceById(id)
+				.orElseThrow(() -> new OpenemsException("Unable to find instance with id '" + id + "'"));
 	}
 
 	/**
@@ -467,7 +492,7 @@ public class AppManagerImpl extends AbstractOpenemsComponent
 	) {
 		var properties = instance.properties;
 		if (openemsApp instanceof AbstractOpenemsAppWithProps) {
-			properties = ((AbstractOpenemsAppWithProps<?, ?, ?>) openemsApp).fillUpProperties(properties);
+			properties = AbstractOpenemsApp.fillUpProperties(openemsApp, properties);
 		}
 		return new OpenemsAppInstance(//
 				instance.appId, instance.alias, instance.instanceId, //
@@ -484,22 +509,31 @@ public class AppManagerImpl extends AbstractOpenemsComponent
 	 * @return the Future JSON-RPC Response
 	 * @throws OpenemsNamedException on error
 	 */
-	public CompletableFuture<AddAppInstance.Response> handleAddAppInstanceRequest(User user,
-			AddAppInstance.Request request, boolean ignoreBackend) throws OpenemsNamedException {
+	public AddAppInstance.Response handleAddAppInstanceRequest(//
+			final User user, // nullable
+			final AddAppInstance.Request request, //
+			final boolean ignoreBackend //
+	) throws OpenemsNamedException {
 		// check if key is valid for this app
-		if (!ignoreBackend && !this.backendUtil.isKeyApplicable(user, request.key, request.appId)) {
+		if (!ignoreBackend && !this.backendUtil.isKeyApplicable(user, request.key(), request.appId())) {
 			throw new OpenemsException("Key not applicable!");
 		}
 
-		var openemsApp = this.findAppById(request.appId);
-		final var response = this.lockModifyingApps(() -> {
+		final var openemsApp = this.findAppByIdOrError(request.appId());
+
+		return this.lockModifyingApps(() -> {
+			// initial check if the app can even be installed
+			final var language = user == null ? Language.DEFAULT : user.getLanguage();
+			openemsApp.getAppConfiguration(ConfigurationTarget.ADD, request.properties(), language);
+			this.validator.checkStatus(openemsApp, language);
+
 			List<String> warnings = new ArrayList<>();
-			var instance = new OpenemsAppInstance(openemsApp.getAppId(), request.alias, UUID.randomUUID(),
-					request.properties, null);
+			var instance = new OpenemsAppInstance(openemsApp.getAppId(), request.alias(), UUID.randomUUID(),
+					request.properties(), null);
 			if (!ignoreBackend) {
 				try {
 					// try to send the backend the install request
-					this.backendUtil.addInstallAppInstanceHistory(user, request.key, request.appId,
+					this.backendUtil.addInstallAppInstanceHistory(user, request.key(), request.appId(),
 							instance.instanceId);
 				} catch (OpenemsNamedException e) {
 					// if timeout happens but the backend registered the app as installed it may
@@ -513,10 +547,13 @@ public class AppManagerImpl extends AbstractOpenemsComponent
 			}
 
 			try {
+				final var tmpInstance = instance;
 				final var installedValues = this.lastUpdate = this.useAppManagerAppHelper(appHelper -> {
 					// actually install the app
-					return appHelper.installApp(user, instance, openemsApp);
+					return appHelper.installApp(user, tmpInstance, openemsApp);
 				});
+
+				instance = installedValues.rootInstance;
 
 				warnings.addAll(installedValues.warnings);
 				this.instantiatedApps.removeAll(installedValues.modifiedOrCreatedApps);
@@ -528,18 +565,21 @@ public class AppManagerImpl extends AbstractOpenemsComponent
 				this.instantiatedApps.add(instance);
 			}
 			var instanceWithFilledProperties = this.createInstanceWithFilledProperties(openemsApp, instance);
-			return CompletableFuture.completedFuture(//
-					new AddAppInstance.Response(request.id, instanceWithFilledProperties, warnings));
+			return new Pair<>(true, new AddAppInstance.Response(instanceWithFilledProperties, warnings));
+		}, (shouldUpdate) -> {
+			if (shouldUpdate == null || !shouldUpdate) {
+				return;
+			}
+			try {
+				// Update App-Manager configuration
+				this.updateAppManagerConfiguration(user, this.instantiatedApps);
+			} catch (OpenemsNamedException e) {
+				this.appSynchronizeWorker.setValidBackendResponse(false);
+				this.appSynchronizeWorker.triggerNextRun();
+				throw new OpenemsException(
+						"AddAppInstance: unable to update App-Manager configuration: " + e.getMessage());
+			}
 		});
-		try {
-			// Update App-Manager configuration
-			this.updateAppManagerConfiguration(user, this.instantiatedApps);
-		} catch (OpenemsNamedException e) {
-			this.appSynchronizeWorker.setValidBackendResponse(false);
-			this.appSynchronizeWorker.triggerNextRun();
-			throw new OpenemsException("AddAppInstance: unable to update App-Manager configuration: " + e.getMessage());
-		}
-		return response;
 	}
 
 	/**
@@ -550,8 +590,8 @@ public class AppManagerImpl extends AbstractOpenemsComponent
 	 * @return the Future JSON-RPC Response
 	 * @throws OpenemsNamedException on error
 	 */
-	public CompletableFuture<AddAppInstance.Response> handleAddAppInstanceRequest(User user,
-			AddAppInstance.Request request) throws OpenemsNamedException {
+	public AddAppInstance.Response handleAddAppInstanceRequest(User user, AddAppInstance.Request request)
+			throws OpenemsNamedException {
 		return this.handleAddAppInstanceRequest(user, request, false);
 	}
 
@@ -563,14 +603,12 @@ public class AppManagerImpl extends AbstractOpenemsComponent
 	 * @return the request id
 	 * @throws OpenemsNamedException on error
 	 */
-	public CompletableFuture<? extends JsonrpcResponseSuccess> handleDeleteAppInstanceRequest(User user,
-			DeleteAppInstance.Request request) throws OpenemsNamedException {
-		final var updatedResultPair = this.lockModifyingApps(() -> {
-			final OpenemsAppInstance instance;
-			try {
-				instance = this.findInstanceById(request.instanceId);
-			} catch (NoSuchElementException e) {
-				return null;
+	public DeleteAppInstance.Response handleDeleteAppInstanceRequest(User user, DeleteAppInstance.Request request)
+			throws OpenemsNamedException {
+		final var updatedResultPair = this.<Boolean, Pair<UpdateValues, OpenemsAppInstance>>lockModifyingApps(() -> {
+			final var instance = this.findInstanceById(request.instanceId()).orElse(null);
+			if (instance == null) {
+				return new Pair<>(false, null);
 			}
 
 			final var result = this.lastUpdate = this.useAppManagerAppHelper(appHelper -> {
@@ -580,18 +618,24 @@ public class AppManagerImpl extends AbstractOpenemsComponent
 			// replace modified apps
 			this.instantiatedApps.removeAll(result.modifiedOrCreatedApps);
 			this.instantiatedApps.addAll(result.modifiedOrCreatedApps);
-			return new Pair<>(result, instance);
+			return new Pair<>(true, new Pair<>(result, instance));
+		}, (shouldUpdate) -> {
+			if (shouldUpdate == null || !shouldUpdate) {
+				return;
+			}
+			try {
+				this.updateAppManagerConfiguration(user, this.instantiatedApps);
+			} catch (OpenemsNamedException e) {
+				throw new OpenemsException("Unable to update App-Manager configuration for ID [" + request.instanceId()
+						+ "]: " + e.getMessage());
+			}
 		});
+		if (updatedResultPair == null) {
+			return new DeleteAppInstance.Response(emptyList());
+		}
 
 		final var updatedResult = updatedResultPair.first;
 		final var removedInstance = updatedResultPair.second;
-
-		try {
-			this.updateAppManagerConfiguration(user, this.instantiatedApps);
-		} catch (OpenemsNamedException e) {
-			throw new OpenemsException("Unable to update App-Manager configuration for ID [" + request.instanceId
-					+ "]: " + e.getMessage());
-		}
 
 		var backendDeinstallFuture = this.backendUtil.addDeinstallAppInstanceHistory(user, removedInstance.appId,
 				removedInstance.instanceId);
@@ -604,10 +648,9 @@ public class AppManagerImpl extends AbstractOpenemsComponent
 			this._setAppsNotSyncedWithBackend(true);
 		});
 		if (updatedResult == null) {
-			return CompletableFuture.completedFuture(new GenericJsonrpcResponseSuccess(request.id));
+			return new DeleteAppInstance.Response(emptyList());
 		} else {
-			return CompletableFuture
-					.completedFuture(new DeleteAppInstance.Response(request.id, updatedResult.warnings));
+			return new DeleteAppInstance.Response(updatedResult.warnings);
 		}
 	}
 
@@ -619,15 +662,12 @@ public class AppManagerImpl extends AbstractOpenemsComponent
 	 * @return the Future JSON-RPC Response
 	 * @throws OpenemsNamedException on error
 	 */
-	private CompletableFuture<JsonrpcResponseSuccess> handleGetAppAssistantRequest(User user,
-			GetAppAssistant.Request request) throws OpenemsNamedException {
-		for (var app : this.availableApps) {
-			if (request.appId.equals(app.getAppId())) {
-				return CompletableFuture.completedFuture(
-						new GetAppAssistant.Response(request.id, app.getAppAssistant(user.getLanguage())));
-			}
-		}
-		throw new OpenemsException("App-ID [" + request.appId + "] is unknown");
+	private GetAppAssistant.Response handleGetAppAssistantRequest(//
+			final User user, //
+			final GetAppAssistant.Request request //
+	) throws OpenemsNamedException {
+		final var app = this.findAppByIdOrError(request.appId());
+		return new GetAppAssistant.Response(app.getAppAssistant(user));
 	}
 
 	/**
@@ -638,14 +678,10 @@ public class AppManagerImpl extends AbstractOpenemsComponent
 	 * @return the Future JSON-RPC Response
 	 * @throws OpenemsNamedException on error
 	 */
-	private CompletableFuture<JsonrpcResponseSuccess> handleGetAppDescriptorRequest(User user,
-			GetAppDescriptor.Request request) throws OpenemsNamedException {
-		try {
-			var app = this.findAppById(request.appId);
-			return CompletableFuture.completedFuture(new GetAppDescriptor.Response(request.id, app.getAppDescriptor()));
-		} catch (NoSuchElementException e) {
-			throw new OpenemsException("App-ID [" + request.appId + "] is unknown");
-		}
+	private GetAppDescriptor.Response handleGetAppDescriptorRequest(User user, GetAppDescriptor.Request request)
+			throws OpenemsNamedException {
+		final var app = this.findAppByIdOrError(request.appId());
+		return new GetAppDescriptor.Response(app.getAppDescriptor(this.oem));
 	}
 
 	/**
@@ -656,19 +692,20 @@ public class AppManagerImpl extends AbstractOpenemsComponent
 	 * @return the Future JSON-RPC Response
 	 * @throws OpenemsNamedException on error
 	 */
-	private CompletableFuture<JsonrpcResponseSuccess> handleGetAppInstancesRequest(User user,
-			GetAppInstances.Request request) throws OpenemsNamedException {
+	private GetAppInstances.Response handleGetAppInstancesRequest(User user, GetAppInstances.Request request)
+			throws OpenemsNamedException {
 		var instances = this.instantiatedApps.stream() //
-				.filter(i -> i.appId.equals(request.appId)) //
+				.filter(i -> i.appId.equals(request.appId())) //
 				.map(t -> {
-					final var app = this.findAppById(t.appId);
+					final var app = this.findAppById(t.appId).orElse(null);
 					var properties = t.properties;
-					if (app instanceof AbstractOpenemsAppWithProps) {
-						properties = ((AbstractOpenemsAppWithProps<?, ?, ?>) app).fillUpProperties(properties);
+					if (app != null && app instanceof AbstractOpenemsAppWithProps) {
+						properties = AbstractOpenemsApp.fillUpProperties(app, properties);
 					}
 					return new OpenemsAppInstance(t.appId, t.alias, t.instanceId, properties, t.dependencies);
-				});
-		return CompletableFuture.completedFuture(new GetAppInstances.Response(request.id, instances));
+				}) //
+				.toList();
+		return new GetAppInstances.Response(instances);
 	}
 
 	/**
@@ -679,13 +716,12 @@ public class AppManagerImpl extends AbstractOpenemsComponent
 	 * @return the Future JSON-RPC Response
 	 * @throws OpenemsNamedException on error
 	 */
-	private CompletableFuture<JsonrpcResponseSuccess> handleGetAppRequest(User user, GetApp.Request request)
-			throws OpenemsNamedException {
-		var app = this.availableApps.stream().filter(t -> t.getAppId().equals(request.appId)).findFirst().get();
-		var instances = this.instantiatedApps.stream().filter(t -> t.appId.equals(request.appId))
-				.collect(Collectors.toList());
-		return CompletableFuture
-				.completedFuture(new GetApp.Response(request.id, app, instances, user.getLanguage(), this.validator));
+	private GetApp.Response handleGetAppRequest(User user, GetApp.Request request) throws OpenemsNamedException {
+		final var app = this.findAppByIdOrError(request.appId());
+		var instances = this.instantiatedApps.stream() //
+				.filter(t -> t.appId.equals(request.appId())) //
+				.toList();
+		return GetApp.Response.newInstance(app, instances, user.getLanguage(), this.validator);
 	}
 
 	/**
@@ -696,46 +732,103 @@ public class AppManagerImpl extends AbstractOpenemsComponent
 	 * @return the Future JSON-RPC Response
 	 * @throws OpenemsNamedException on error
 	 */
-	private CompletableFuture<JsonrpcResponseSuccess> handleGetAppsRequest(User user, GetApps.Request request)
-			throws OpenemsNamedException {
-		return CompletableFuture.completedFuture(new GetApps.Response(request.id, this.availableApps,
-				this.instantiatedApps, user.getRole(), user.getLanguage(), this.validator));
+	private GetApps.Response handleGetAppsRequest(User user, GetApps.Request request) throws OpenemsNamedException {
+		return GetApps.Response.newInstance(this.availableApps, this.instantiatedApps, user.getRole(),
+				user.getLanguage(), this.validator);
 	}
 
 	@Override
-	public CompletableFuture<? extends JsonrpcResponseSuccess> handleJsonrpcRequest(User user, JsonrpcRequest request)
-			throws OpenemsNamedException {
-		user.assertRoleIsAtLeast("handleJsonrpcRequest", Role.OWNER);
+	public void buildJsonApiRoutes(JsonApiBuilder builder) {
+		builder.handleRequest(new GetApps(), endpoint -> {
+			endpoint.setDescription("""
+					Gets all available apps on the current edge.
+					""".stripIndent());
 
-		switch (request.getMethod()) {
+			endpoint.applyRequestBuilder(request -> {
+				request.addExample(new GetApps.Request());
+			});
 
-		case GetApps.METHOD:
-			return this.handleGetAppsRequest(user, GetApps.Request.from(request));
+		}, call -> this.handleGetAppsRequest(call.get(EdgeKeys.USER_KEY), call.getRequest()));
 
-		case GetApp.METHOD:
-			return this.handleGetAppRequest(user, GetApp.Request.from(request));
+		builder.handleRequest(new GetApp(), endpoint -> {
+			endpoint.setDescription("""
+					Gets an app by its id.
+					""".stripIndent());
 
-		case GetAppAssistant.METHOD:
-			return this.handleGetAppAssistantRequest(user, GetAppAssistant.Request.from(request));
+			endpoint.applyRequestBuilder(request -> {
+				request.addExample("Get Keba app", new GetApp.Request("App.Evcs.Keba"));
+			});
 
-		case GetAppDescriptor.METHOD:
-			return this.handleGetAppDescriptorRequest(user, GetAppDescriptor.Request.from(request));
+		}, call -> this.handleGetAppRequest(call.get(EdgeKeys.USER_KEY), call.getRequest()));
 
-		case GetAppInstances.METHOD:
-			return this.handleGetAppInstancesRequest(user, GetAppInstances.Request.from(request));
+		builder.handleRequest(new GetAppAssistant(), endpoint -> {
+			endpoint.setDescription("""
+					Gets the AppAssistant for a app.
+					""".stripIndent());
 
-		case AddAppInstance.METHOD:
-			return this.handleAddAppInstanceRequest(user, AddAppInstance.Request.from(request), false);
+			endpoint.applyRequestBuilder(request -> {
+				request.addExample("Get the AppAssistant for Keba app", new GetAppAssistant.Request("App.Evcs.Keba"));
+			});
 
-		case UpdateAppInstance.METHOD:
-			return this.handleUpdateAppInstanceRequest(user, UpdateAppInstance.Request.from(request));
+		}, call -> this.handleGetAppAssistantRequest(call.get(EdgeKeys.USER_KEY), call.getRequest()));
 
-		case DeleteAppInstance.METHOD:
-			return this.handleDeleteAppInstanceRequest(user, DeleteAppInstance.Request.from(request));
+		builder.handleRequest(new GetAppDescriptor(), endpoint -> {
+			endpoint.setDescription("""
+					Gets the AppDescriptor for a app.
+					""".stripIndent());
 
-		default:
-			throw OpenemsError.JSONRPC_UNHANDLED_METHOD.exception(request.getMethod());
-		}
+			endpoint.applyRequestBuilder(request -> {
+				request.addExample("Get the AppDescriptor for Keba app", new GetAppDescriptor.Request("App.Evcs.Keba"));
+			});
+
+		}, call -> this.handleGetAppDescriptorRequest(call.get(EdgeKeys.USER_KEY), call.getRequest()));
+
+		builder.handleRequest(new GetAppInstances(), endpoint -> {
+			endpoint.setDescription("""
+					Gets the AppInstances for a app.
+					""".stripIndent());
+
+			endpoint.applyRequestBuilder(request -> {
+				request.addExample("Get the instances of the Keba app", new GetAppInstances.Request("App.Evcs.Keba"));
+			});
+
+		}, call -> this.handleGetAppInstancesRequest(call.get(EdgeKeys.USER_KEY), call.getRequest()));
+
+		builder.handleRequest(new UpdateAppInstance(), endpoint -> {
+			endpoint.setDescription("""
+					Updates a AppInstance.
+					""".stripIndent());
+
+			endpoint.setGuards(EdgeGuards.roleIsAtleast(Role.OWNER));
+
+		}, call -> this.handleUpdateAppInstanceRequest(call.get(EdgeKeys.USER_KEY), call.getRequest()));
+
+		builder.handleRequest(new DeleteAppInstance(), endpoint -> {
+			endpoint.setDescription("""
+					Deletes a AppInstance.
+					""".stripIndent()) //
+					.setGuards(EdgeGuards.roleIsAtleast(Role.INSTALLER));
+
+		}, call -> this.handleDeleteAppInstanceRequest(call.get(EdgeKeys.USER_KEY), call.getRequest()));
+
+		builder.handleRequest(new AddAppInstance(), endpoint -> {
+			endpoint.setDescription("""
+					Handles a AddAppInstance Request.
+					""".stripIndent());
+			endpoint.setGuards(EdgeGuards.roleIsAtleast(Role.OWNER));
+
+			endpoint.applyRequestBuilder(request -> {
+				request.addExample(new AddAppInstance.Request("0000-0000-0000-0000", "App.Id", "alias",
+						JsonUtils.buildJsonObject() //
+								.addProperty("key", "value") //
+								.build()));
+			});
+			endpoint.applyResponseBuilder(response -> {
+				response.addExample(new AddAppInstance.Response(
+						new OpenemsAppInstance("App.Id", "alias", UUID.randomUUID(), new JsonObject(), emptyList()),
+						emptyList()));
+			});
+		}, call -> this.handleAddAppInstanceRequest(call.get(EdgeKeys.USER_KEY), call.getRequest()));
 	}
 
 	/**
@@ -746,20 +839,15 @@ public class AppManagerImpl extends AbstractOpenemsComponent
 	 * @return the Future JSON-RPC Response
 	 * @throws OpenemsNamedException on error
 	 */
-	public CompletableFuture<UpdateAppInstance.Response> handleUpdateAppInstanceRequest(User user,
-			UpdateAppInstance.Request request) throws OpenemsNamedException {
-		final var response = this.lockModifyingApps(() -> {
-			final OpenemsAppInstance oldApp;
-			final OpenemsApp app;
+	public UpdateAppInstance.Response handleUpdateAppInstanceRequest(User user, UpdateAppInstance.Request request)
+			throws OpenemsNamedException {
+		return this.lockModifyingApps(() -> {
+			final var oldApp = this.findInstanceByIdOrError(request.instanceId());
+			final var app = this.findAppByIdOrError(oldApp.appId);
+			app.getAppConfiguration(ConfigurationTarget.UPDATE, request.properties(), user.getLanguage());
 
-			try {
-				oldApp = this.findInstanceById(request.instanceId);
-				app = this.findAppById(oldApp.appId);
-			} catch (NoSuchElementException e) {
-				throw new OpenemsException("App-Instance-ID [" + request.instanceId + "] is unknown.");
-			}
-			final var updatedInstance = new OpenemsAppInstance(oldApp.appId, request.alias, oldApp.instanceId,
-					request.properties, oldApp.dependencies);
+			final var updatedInstance = new OpenemsAppInstance(oldApp.appId, request.alias(), oldApp.instanceId,
+					request.properties(), oldApp.dependencies);
 
 			var result = this.lastUpdate = this.useAppManagerAppHelper(appHelper -> {
 				return appHelper.updateApp(user, oldApp, updatedInstance, app);
@@ -769,17 +857,20 @@ public class AppManagerImpl extends AbstractOpenemsComponent
 			// replace old instances with new ones
 			this.instantiatedApps.removeAll(result.modifiedOrCreatedApps);
 			this.instantiatedApps.addAll(result.modifiedOrCreatedApps);
-			return CompletableFuture.completedFuture(//
-					new UpdateAppInstance.Response(request.id, //
-							this.createInstanceWithFilledProperties(app, result.rootInstance), result.warnings));
+
+			return new Pair<>(true, new UpdateAppInstance.Response(
+					this.createInstanceWithFilledProperties(app, result.rootInstance), result.warnings));
+		}, (shouldUpdate) -> {
+			if (shouldUpdate == null || !shouldUpdate) {
+				return;
+			}
+			try {
+				this.updateAppManagerConfiguration(user, this.instantiatedApps);
+			} catch (OpenemsNamedException e) {
+				throw new OpenemsException("Unable to update App-Manager configuration for ID [" + request.instanceId()
+						+ "]: " + e.getMessage());
+			}
 		});
-		try {
-			this.updateAppManagerConfiguration(user, this.instantiatedApps);
-		} catch (OpenemsNamedException e) {
-			throw new OpenemsException("Unable to update App-Manager configuration for ID [" + request.instanceId
-					+ "]: " + e.getMessage());
-		}
-		return response;
 	}
 
 	/**
@@ -790,15 +881,12 @@ public class AppManagerImpl extends AbstractOpenemsComponent
 	 * @throws OpenemsNamedException when the configuration can not be updated
 	 */
 	private void updateAppManagerConfiguration(User user, List<OpenemsAppInstance> apps) throws OpenemsNamedException {
+		this.waitingForModified = true;
 		AppManagerImpl.sortApps(apps);
 		var p = new Property("apps", getJsonAppsString(apps));
-		var updateRequest = new UpdateComponentConfigRequest(SINGLETON_COMPONENT_ID, Arrays.asList(p));
 		// user can be null using internal method
-		if (user == null) {
-			((ComponentManagerImpl) this.componentManager).handleUpdateComponentConfigRequest(user, updateRequest);
-		} else {
-			this.componentManager.handleJsonrpcRequest(user, updateRequest);
-		}
+		this.componentManager.handleUpdateComponentConfigRequest(user,
+				new UpdateComponentConfigRequest(SINGLETON_COMPONENT_ID, Arrays.asList(p)));
 	}
 
 	private static void sortApps(List<OpenemsAppInstance> apps) {
@@ -832,16 +920,43 @@ public class AppManagerImpl extends AbstractOpenemsComponent
 		}
 	}
 
-	private <T> T lockModifyingApps(ThrowingSupplier<T, OpenemsNamedException> supplier) throws OpenemsNamedException {
+	private <F, T> T lockModifyingApps(//
+			ThrowingSupplier<Pair<F, T>, OpenemsNamedException> supplier, //
+			ThrowingConsumer<F, OpenemsNamedException> runFinally //
+	) throws OpenemsNamedException {
+		// try to get lock within 5 minutes otherwise just log a warning
 		try {
-			this.mutexForUpdatingConfig.await();
-			this.aquiredMutex = true;
-		} catch (InterruptedException e) {
-			throw new OpenemsException(e);
+			if (!this.lockModifyingApps.tryLock(5, TimeUnit.MINUTES)) {
+				this.log.warn("Wait time for 'lockModifyingApps' elapsed.");
+			}
+		} catch (InterruptedException e1) {
+			this.log.error(e1.getMessage(), e1);
+			throw new OpenemsException(e1);
 		}
-		synchronized (this.appSynchronizeWorker.getSynchronizationLock()) {
-			synchronized (this.instantiatedApps) {
-				return supplier.get();
+
+		F firstResult = null;
+		try {
+			if (this.waitingForModified) {
+				// wait if another request is waiting for the modification event to happen
+				// or continue after 5 minutes of waiting
+				if (!this.waitingForModifiedCondition.await(5, TimeUnit.MINUTES)) {
+					this.log.warn("Wait time for 'instantiatedAppsCondition' elapsed.");
+				}
+				// continue with executing the supplier
+			}
+			synchronized (this.appSynchronizeWorker.getSynchronizationLock()) {
+				final var resultPair = supplier.get();
+				firstResult = resultPair.first;
+				return resultPair.second;
+			}
+		} catch (InterruptedException e) {
+			this.log.error(e.getMessage(), e);
+			throw new OpenemsException(e);
+		} finally {
+			try {
+				runFinally.accept(firstResult);
+			} finally {
+				this.lockModifyingApps.unlock();
 			}
 		}
 	}
